# realty-web/realty-rest/src/main/java/io/github/md5sha256/realty/rest/json/PlayerRegionsResponse.java
@@ -16,7 +16,7 @@ import java.util.List;
  */
 @JsonInclude(JsonInclude.Include.NON_NULL)
 public record PlayerRegionsResponse(
-        @NotNull PlayerRef player,
+        @NotNull PartyRef player,
         int page,
         int pageSize,
         int totalCount,
